; ModuleID = '/home/carl/AnghaBench/mongoose/examples/CC3200/extr_wifi.c_SimpleLinkNetAppEventHandler.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/CC3200/extr_wifi.c_SimpleLinkNetAppEventHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }

@SL_NETAPP_IPV4_IPACQUIRED_EVENT = common dso_local global i64 0, align 8
@LL_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"IP acquired: %lu.%lu.%lu.%lu\00", align 1
@MCU_RED_LED_GPIO = common dso_local global i32 0, align 4
@SL_NETAPP_IP_LEASED_EVENT = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [10 x i8] c"IP leased\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"NetApp event %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SimpleLinkNetAppEventHandler(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @SL_NETAPP_IPV4_IPACQUIRED_EVENT, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %35

9:                                                ; preds = %1
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  store %struct.TYPE_7__* %12, %struct.TYPE_7__** %3, align 8
  %13 = load i32, i32* @LL_INFO, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @SL_IPV4_BYTE(i32 %16, i32 3)
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @SL_IPV4_BYTE(i32 %20, i32 2)
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @SL_IPV4_BYTE(i32 %24, i32 1)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @SL_IPV4_BYTE(i32 %28, i32 0)
  %30 = sext i32 %29 to i64
  %31 = inttoptr i64 %30 to i8*
  %32 = call i32 @LOG(i32 %13, i8* %31)
  %33 = load i32, i32* @MCU_RED_LED_GPIO, align 4
  %34 = call i32 @GPIO_IF_LedToggle(i32 %33)
  br label %54

35:                                               ; preds = %1
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* @SL_NETAPP_IP_LEASED_EVENT, align 8
  %40 = icmp eq i64 %38, %39
  br i1 %40, label %41, label %44

41:                                               ; preds = %35
  %42 = load i32, i32* @LL_INFO, align 4
  %43 = call i32 @LOG(i32 %42, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  br label %53

44:                                               ; preds = %35
  %45 = load i32, i32* @LL_INFO, align 4
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = trunc i64 %48 to i32
  %50 = sext i32 %49 to i64
  %51 = inttoptr i64 %50 to i8*
  %52 = call i32 @LOG(i32 %45, i8* %51)
  br label %53

53:                                               ; preds = %44, %41
  br label %54

54:                                               ; preds = %53, %9
  ret void
}

declare dso_local i32 @LOG(i32, i8*) #1

declare dso_local i32 @SL_IPV4_BYTE(i32, i32) #1

declare dso_local i32 @GPIO_IF_LedToggle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
